@deprecated category change data
